# titiler-openeo

./: .dockerignore  .env.cdse  .env.eoapi  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .release-please-manifest.json  .yamllint  404.html  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  cr.yaml  docker-compose.yml  index.html  index.md  log_config.yaml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml  test_parameter_resolution.py  test_query_params.py  test_sample_scenario.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: lazy-rasterstack-refactor.md
.github/prompts/: devlog-trulyLazyRasterStack.md  plan-trulyLazyRasterStack-v2.prompt.md  plan-trulyLazyRasterStack-v3.prompt.md  plan-trulyLazyRasterStack.prompt.md
.github/workflows/: check_charts.yml  ci.yml  cleanup-images.yml  deploy_mkdocs.yml  rebuild-release-images.yml  release-please.yml  validate-pr-title.yml
admin-guide/: admin-guide.md  index.html
authorization/: authorization.md  index.html
concepts/: concepts.md  index.html
contributing/: contributing.md  index.html
deployment/aws/: .env.example  README.md  package-lock.json  package.json
deployment/aws/cdk/: app.py
deployment/aws/lambda/: lambda.Dockerfile
deployment/k8s/: README.md
deployment/k8s/charts/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
deployment/k8s/charts/ci/: default-values.yaml  postgres-values.yaml
deployment/k8s/charts/files/: copernicus.json  eoapi.json  lego_colors.json  lego_colors_water.json  log_config.yaml  virtual_bands.json
deployment/k8s/charts/templates/: NOTES.txt  _helpers.tpl  cloudferro-credentials-job.yaml  cloudferro-rbac.yaml  configmap.yaml  deployment.yaml  hpa.yaml  init-job.yaml  pvc.yaml
deployment/k8s/charts/tests/: database_url_test.yaml  deployment_test.yaml  native_cache_test.yaml  sealed-secret-install-values.yaml  virtual_bands_test.yaml
docs/: mkdocs.yml
docs/audits/: async-concurrency-audit.md  memory-oom-audit.md  memory-profiling.md
docs/issues/: lazy-raster-stack-uniqueness-refactoring.md
docs/src/: admin-guide.md  authorization.md  concepts.md  documentation-plan.md  index.md  kubernetes.md  local-setup.md  memory-management.md  memory-tuning.md  migration-rasterstack.md  openid-connect.md  parameter-management.md  raster-stack.md  tile-assignment.md  type-validation.md  virtual-bands.md
docs/src/examples/: index.md  parameter-management.md
docs/src/issues/: 01-mkdocs-template-upgrade.md
docs/src/notebooks/: evi.ipynb  load_raster_stack.ipynb  manhattan.ipynb  ndvi_time_series.ipynb  timeseries-basic.csv
docs/src/use cases/lego/: LEGO Satellite Imagery Mosaic_ Interactive Demo for LPS25.md  LEGO+Colours+-+Pantone,+HSL+and+HEX+Values.xlsx  auth_example.jsx  implementation_plan.md  insert_nodata.sql  lego_services.json  (+6 more)
examples/: index.html  index.md
examples/parameter-management/: index.html
infrastructure/: README.md
infrastructure/aws/: .env.example  requirements-cdk.txt
infrastructure/aws/cdk/: config.py
infrastructure/aws/lambda/: handler.py  lambda.Dockerfile
kubernetes/: index.html  kubernetes.md
kubernetes-cloudnativepg/: index.html  kubernetes-cloudnativepg.md
local-setup/: index.html
memory-management/: index.html
memory-tuning/: index.html
migration-rasterstack/: index.html  migration-rasterstack.md
notebooks/: check_columns.py  create_lego_dict.py  lego.ipynb  lego.md  lego_colors_dict.py  lego_europe.ipynb  load_raster_stack.ipynb  make_europe_map.py  manhattan.ipynb  ndvi_time_series.ipynb  test_water_mask.py
notebooks/evi/: evi.ipynb  index.html
notebooks/load_raster_stack/: index.html
notebooks/manhattan/: index.html  manhattan.ipynb
notebooks/ndvi_time_series/: index.html  ndvi_time_series.ipynb
notebooks/openeo/: index.html  openeo.ipynb
openid-connect/: index.html  openid-connect.md
parameter-management/: index.html
project-overview/: index.html  project-overview.md
raster-stack/: index.html
release-notes/: index.html
scripts/: aggregate_brick_quantities.py  debug_graph.py  profile_memory.py  simplify_coastline.py
search/: search_index.json
services/: copernicus.json  eoapi.json  lego.json
tests/: conftest.py  sample.json  test_aggregate_temporal.py  test_aggregator_axis.py  test_apply_graph_integration.py  test_apply_spectral_stack.py  test_auth.py  test_core_coverage.py  test_core_fix.py  test_cutline_mask.py  test_decorator_named_parameters.py  test_dimension_reduction.py  test_errors.py  test_eviction_integration.py  test_filter_temporal.py  test_get_param_item.py  test_health.py  test_indices_streaming.py  test_integration.py  test_io.py  test_io_processes.py  test_lazy_raster_stack.py  test_local_store_layout.py  test_main.py  test_mask.py  test_mask_polygon.py  test_mask_preservation.py  test_math_float32.py  test_memory_profiling.py  test_merge_cubes.py  test_middleware.py  test_normalized_difference.py  test_parameter_alignment.py  test_parameter_reference_resolution.py  test_parameter_resolution.py  test_parameter_resolution_coverage.py  test_pg_to_cql2.py  test_pixel_selection_reducers.py  test_process_decorator.py  test_processes.py  (+28 more)
tests/fixtures/graphs/: rgb.json
tile-assignment/: index.html  tile-assignment.md
titiler/openeo/: __init__.py  auth.py  backend.py  errors.py  example.json  factory.py  health.py  main.py  middleware.py  models.py  profiling.py  reader.py  results_cache.py  settings.py  stacapi.py
titiler/openeo/backends/: __init__.py  base.py  pgstac.py  stacapi.py
titiler/openeo/data/: lego_colors.json
titiler/openeo/models/: auth.py  openapi.py  udp.py
titiler/openeo/processes/: __init__.py
titiler/openeo/services/: __init__.py  auth.py  base.py  duckdb.py  duckdb_base.py  local.py  parquet.py  sqlalchemy.py  sqlalchemy_tile.py
titiler/openeo/stac/: __init__.py  base.py  pgstac.py  stacapi.py
titiler/openeo/templates/: index.html
titiler/openeo/virtualbands/: __init__.py  base.py  examples.py  registry.py
type-validation/: index.html  type-validation.md
(+97 files in other folders)
